# ChangeLog for sys-block/whdd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/whdd/ChangeLog,v 1.5 2013/12/09 18:48:12 maksbotan Exp $

*whdd-2.1 (09 Dec 2013)

  09 Dec 2013; Maxim Koltsov <maksbotan@gentoo.org> +whdd-2.1.ebuild:
  Bump to 2.1

  30 Jun 2013; Maxim Koltsov <maksbotan@gentoo.org> whdd-2.0.ebuild:
  Create correct VERSION file for release versions

*whdd-2.0 (29 Jun 2013)

  29 Jun 2013; Maxim Koltsov <maksbotan@gentoo.org> +whdd-2.0.ebuild:
  Bump to 2.0, thanks to Andrey Utkin.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*whdd-9999 (08 Mar 2012)
*whdd-1.0 (08 Mar 2012)

  08 Mar 2012; Maxim Koltsov <maksbotan@gentoo.org> +metadata.xml,
  +whdd-1.0.ebuild, +whdd-9999.ebuild:
  Add sys-apps/whdd, thanks to Andrey Utkin <andrey.krieger.utkin@gmail.com>