@@ -1,23 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST whdd-1.0.tar.gz 16144 SHA256 fc690f40eda8891071097ac96701faf2c6fec51a31de377d0729d52400aa7d90
-DIST whdd-2.0.tar.gz 27979 SHA256 5d712bf03f234398139656081e1dac1158e38aa64fba65901bddb172a8c33c96 SHA512 d6e677ddc3333132fff39bbae13da299a2f6a1a9fbfa042cfc09ceeaa65d17223af7ff9443934c26eee69afafee16c0d304fe70b58cf7298f78d139c1eaa7383 WHIRLPOOL 948c0ebc69b89fbe5b386b60fdf24ee9defdfbd926c05752bb6a1e10d6309f1ded6339ae2b233213560d33987dcd57d814c04e135ee853a163cd84cd4d3a982c
 DIST whdd-2.1.tar.gz 32363 SHA256 a5cdb289381a623b4f9aad9e8a736ae206a91b3c214942f2755e83865b2d4c7b SHA512 a43796acf359069e27c622b9816de3d041f87ff77a83167020796c445e65ca0c728c8fd3418814802d84fa8cb594a72c764dd5b11e85771a024ab9c8a43b26a0 WHIRLPOOL 6214f10c223ee661185954b2adfd7df2bf8ac60f19af638b6ccdce170264e03df6910e48eeabccc958a559cb3f929a32735a79d7ca23567bb1e2535c9eaeb205
-EBUILD whdd-1.0.ebuild 636 SHA256 5f5db717ee475dd184e536edf189d22c59d24af16c6e7037cf8f8c94f820ae2e SHA512 6e87cb9cae4abaf9d348f5ed534a2c7fd44338ab2e2cbc3fe9b4a28a955a23cb57bec818a2574bfff1bfe7377b9061b5df86f80ffaf9c3de1ae21e2c7e0fbe2d WHIRLPOOL 765efe78779d705d6e0f337a0c07bb23c9ef3536a61b37156929c8f5581315e82578bc25f48746cc8702e6faff592af7f4ab1ca25a8dd087684c230b567faa15
-EBUILD whdd-2.0.ebuild 672 SHA256 9844a0963c9bfd2306e965e087845190a782c7686a490f720543a5ae42654bbd SHA512 436f8a600e27f094f89daefb814fca218dc2047be00d3a3fc4766a98d7914980adbff5c0e173b1e5ebe52cf7fdc5b600978a5c234f19e1238baa444d0eb2877c WHIRLPOOL 3958b13f649eec33c2a3fa0a573a9456aa29d9f5f3fa5d400671a799f19331e38a1778574a97b0255b3b56e213792aeb199e0e2fbeaeacc3a0366997a8a4ac5b
+DIST whdd-2.2.tar.gz 33317 SHA256 49d615e46117f1271aac22a063703e87fab749e5357a0c5bb4a369e39d7c9241 SHA512 ab30c1e418cb7ba9881b1a91b99d0b1d5389172c4d5802be69d98cb9c16f1282ff7808e2b40bb937987a9d3ad9fa7f20e630d19307eb0aa1090cff531a904d4a WHIRLPOOL c7d9eee7a21e6390a0c1a5befe5bcb17bf326c0b17ae89164452d5e70a94567cb987ecaf17c90ca0631e3ef1f0d958f8d46881f65169179202c84bedb826719b
 EBUILD whdd-2.1.ebuild 672 SHA256 f2915d38d99915494cadb683e8e7e2b83668fd11d61541805aa69c2de1f3c37a SHA512 3308c954bb3e248cb8f91efedf4d2ca805cbc95aa4d67cc11c34f639d053a56e70b4e914dcc92f3e2bae56d7a4f2c8890c76f97b7c76bb24bff1d3be2545b7d7 WHIRLPOOL 4799a4103ff8686e47cf777e0c14864ed0e5b335210ca4ed8c1272d310fd45964aecc21fb5517172a3eaa13aa17de580ac3788b0366c516cb849a4cbf2b2fb33
+EBUILD whdd-2.2.ebuild 672 SHA256 32d7f9754357cc45b9e8db970ed62d66dc9c3729f68704da8b639488be171335 SHA512 31df4d60f23b70ad536c2b25b3939c8d1e697d0935a33b5fb1567119a83dda46c75507894e851ff3e3f122d573cdd38c7d6bd1556a0b285ecb212ba7f7b3b38f WHIRLPOOL e7a4990894f4dadbf4bdae5584fc3e3dab835a636478aae54154c3e05e6c193e9f54ba27ce3e31b9aeb187c5064db3ac244ff80aaab9dc3c69d849557435c7ec
 EBUILD whdd-9999.ebuild 556 SHA256 94251077ff22e5e15e04bdfa4857d39bcf3fe4ad7181384934b433710bceade5 SHA512 ed9cea87b4f091b642dfec6ce59a9a34812981925eb21c0db4f225c0adeff01a98ebeb06042ab56b6cdfd6ba803005b4bb01ff89319004b535024724ddd9a65d WHIRLPOOL 652bf6ce02f01d90060be11ecb9508f9d89747172ca2f98e97591aac4d1a36241fdab56b3f9d7af6aa8a860e61092a919b1b10390c069c7ea047b385f010dd4f
-MISC ChangeLog 911 SHA256 c71fe5f0308561b71c981f07eea0d3c40a13adf9c7f608165218e6f6d84e43b4 SHA512 ffcac6adf5bd213021a17e56bbc3484126da07e70015dfae5ebd2f764478c7ba299ccb5ac28cd09deec0da864d5d2043f11d196ff7a656438c4252e42e4419cd WHIRLPOOL 414e42bf6ee99a8979af7106e8a0fdaf341317006e439164c0760d9ff2ef3f871e7eb68fbab57c4d188527c42a6ba7278fdf65a717877ed7d7e26951270d4bed
+MISC ChangeLog 1103 SHA256 930911515fb65defe2f3130548aad4309770596db731c40a7f9858bc1de53d5f SHA512 4e9fb4009d38bff34e3eb95e74e9ac0dfad3f1164c2e0d8880ccbec7be0c20aeac1dc17c757e30d599ab5d4b89a07595459d673e6d39381dacbb8db68d871efe WHIRLPOOL 58ce54b4ba26fc0eae2e67883da3dee7baee78cb90414b9c3f9e371238d3ac60cfa2e6d91535c64fe891b33d5c376dde014c6e4f9d58a838e9248e069efddf2e
 MISC metadata.xml 363 SHA256 bbf07a64deba81f7f661d33738ba7b8cdd985960b51dbac405610a6360ca27d7 SHA512 17214952e4c91bf48492e5e14e638fe589a37202a3fcb41bfccdbfdef8749d1b9130444a9c35890e4eadb56231cdd9b9fab54a7126dbcc56b551742c45a93b12 WHIRLPOOL 6ff4486551ae47d960e03f53c3c30745773c8bec244d52bec01615ac8d2aa7e672427fec13ef52693835a53faf0851710e3a2a6857938bcd32e9a5a844a6d816
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJSphBrAAoJEAmJmMX429reC/YH/13qB8r16GJkyhuvF5v8exxf
-THVdDCsQmd5nSURTMlNfD0mwhvzZwzyFy4H2t5sweFMPh+37oGcO9C9cqsWMcOWK
-hEv7u6WKY3tekuTpP4nYAmJEzaGhSvTrFmnbtgR4gIHo1hg3fCQyZxrF7H55Fx6j
-NCoDi9lG9753mDxcNCrEi+NxqrX+uqBf+uKvCx4R5fgTP8mTSeDO+vEwicUcYHXY
-qHZb940CJdFQTU2bEt9qwuxyUy2euvs/uGgI+TmG+cQZlhWr8YBM2v90dUaRyTSU
-Dxiduif1by3oPLDOAfZ5hJxLHip6CfSSfJgXJ+E0kav7WLMI5sgvMObAM6O19XY=
-=AUkL
+iQEcBAEBCAAGBQJUVlAPAAoJEAmJmMX429reO68H/RC0aml6eqZfnkG1uwcx3+Kv
+2jjQJhuV1YXWK2gRmmp8/duqPVfiQbqHVPWEak6WHsy8p6AKNiGlobOkCwCGtZHL
+r/Vosho7yHm5m5+Ja1HTNEODHDfCj0GUgIEhlwJn9yKQbmoFForiQ+BODF2Jf43P
+RpLzn5nu1ryNa3Gy8WWaxmB2k4ztGQ/D7r/ykQCjDqbDHfJUmPZIYgS5innrUMXR
+kYNE+IfGqukl20bISY4nhbOBTWhndn90cC1xh7QH9Kwrx/G54sQ+a+RwuWHG5kYh
+b5mxQBkoMKvbMpZ2Sx0JkHgVc4tuOZv8pLDLUJBq3u1HadwTjSgJNQaDdkPugPA=
+=ldm/
 -----END PGP SIGNATURE-----
