@@ -1,6 +1,12 @@
 # ChangeLog for sys-block/whdd
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/whdd/ChangeLog,v 1.5 2013/12/09 18:48:12 maksbotan Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/whdd/ChangeLog,v 1.6 2014/11/02 15:39:08 maksbotan Exp $
+
+*whdd-2.2 (02 Nov 2014)
+
+  02 Nov 2014; Maxim Koltsov <maksbotan@gentoo.org> +whdd-2.2.ebuild,
+  -whdd-1.0.ebuild, -whdd-2.0.ebuild:
+  Bump to 2.2, fixes bug #527316. Thanks to Andrey Utkin.
 
 *whdd-2.1 (09 Dec 2013)
 
